--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									<a href="#research">Research</a>
 								</li>
 								<li>
-									<a href="#stepup">STEPUP</a>
+									<a href="#https://sites.pitt.edu/~stepup/index.html">STEPUP</a>
 								</li>
 								<li>
 									<a href="#contact">Contact</a>
