--- a/index.html
+++ b/index.html
@@ -100,19 +100,17 @@
 						<article id="about">
 							<h2 class="major">About Me</h2>
 							<!-- Here is an image that you can customize for this page -->
-							<span class="image main">
-								<img src="images/pic01.jpg" alt=""/>
-							</span>
+							<!span class="image main">
+								<!img src="images/pic01.jpg" alt=""/>
+							<!/span>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
-								<b>Education:</b>
+								<b>Education:</b> </br> B.S. in Physics and Astronomy, University of 
+											Pittsburgh, 2023 (anticipated)
 							</p>
 							<p>
 								<b>Research Interests:</b>
-							</p>
-							<p>
-								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/">Include ADS link!</a>
 							</p>
 						</article>
 
