--- a/index.html
+++ b/index.html
@@ -106,28 +106,29 @@
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
-								<b>Education:</b> </br> B.S. in Physics and Astronomy, University of 
-											Pittsburgh, 2023 (anticipated)
+								<b>Education:</b> </br> 
+								B.S. in Physics and Astronomy, University of Pittsburgh, 2023 (anticipated)
 							</p>
 							<p>
-								<b>Research Interests:</b>
+								<b>Research Interests:</b> </br> 
+								Stellar evolution, exoplanets, galactic evolution
 							</p>
 						</article>
 
 						<!-- Here is the "Research" card. -->
 						<article id="research">
 							<h2 class="major">Research</h2>
-							<span class="image main">
-								<img src="images/pic02.jpg" alt=""/>
-							</span>
 							<p>
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								-->
-								<b>Project I Title</b><br>Project description, including further links to posters, talks, publications.
+								<b>Red Clump Stars' Unlikely Binary Companions</b><br>
+								Investigating core helium burning stars to observe shorter binary companions than otherwise predicted
 							</p>
 							<p>
-								<b>Project II Title</b><br>Project description, including further links to posters, talks, publications.
+								<b>Survey of Transiting Extrasolar Planets at University of Pittsburgh (STEPUP)</b><br>
+								Observe and collect data from stars predicted to have an exoplanet in its orbit. Analyze data by 
+								producing light curves to detect planetary transits.
 							</p>
 						</article>
 
