--- a/index.html
+++ b/index.html
@@ -123,10 +123,12 @@
 									the next line.
 								-->
 								<b>Red Clump Stars' Unlikely Binary Companions</b><br>
+								Advisor: Prof. Carles Badenes </br>
 								Investigating core helium burning stars to observe shorter binary companions than otherwise predicted
 							</p>
 							<p>
 								<b>Survey of Transiting Extrasolar Planets at University of Pittsburgh (STEPUP)</b><br>
+								Advisor: Prof. Michael Wood-Vasey</br>
 								Observe and collect data from stars predicted to have an exoplanet in its orbit. Analyze data by 
 								producing light curves to detect planetary transits.
 							</p>
