--- a/index.html
+++ b/index.html
@@ -133,32 +133,11 @@
 								producing light curves to detect planetary transits.
 							</p>
 						</article>
-
-						<!-- Here is the "Community" card. -->
-						<article id="community">
-							<h2 class="major">Community</h2>
-							<span class="image main">
-								<img src="images/pic03.jpg" alt=""/>
-							</span>
-							<p>
-								<b>Teaching:</b>
-							</p>
-							<p>
-								<b>Outreach:</b>
-							</p>
-							<p>
-								<b>Equity & Inclusion:</b>
-							</p>
-						</article>
-
 						<!-- Here is a the "Contact" card. -->
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<p> 
-								<b>Email:</b> 
-							</p>
-							<p> 
-								<b>Address:</b> 
+								<b>Feel free to email me at jmb442@pitt.edu if you have any questions about my current work!</b> 
 							</p>
 
 							<!-- 	Here are the fancy icons that link to your social media.
@@ -171,25 +150,25 @@
 									<!-- 	Note that you need to change the link to point to your page.
 										Replace "#" with your Twitter profile page.
 									-->
-									<a href="#" class="icon fa-twitter">
+									<a href="#" class="icon fa-twitter" target='_blank'>
 										<span class="label">Twitter</span>
 									</a>
 								</li>
 								<!-- The Facebook icon -->
 								<li>
-									<a href="#" class="icon fa-facebook">
-										<span class="label">Facebook</span>
+									<a href="#" class="icon fa-linkedin" target='_blank'>
+										<span class="label">LinkedIn</span>
 									</a>
 								</li>
 								<!-- The Instagram icon -->
 								<li>
-									<a href="#" class="icon fa-instagram">
+									<a href="#" class="icon fa-instagram" target='_blank'>
 										<span class="label">Instagram</span>
 									</a>
 								</li>
 								<!-- The GitHub icon -->
 								<li>
-									<a href="#" class="icon fa-github">
+									<a href="https://github.com/jakobbindas" class="icon fa-github" target='_blank'>
 										<span class="label">GitHub</span>
 									</a>
 								</li>
