--- a/index.html
+++ b/index.html
@@ -150,19 +150,19 @@
 									<!-- 	Note that you need to change the link to point to your page.
 										Replace "#" with your Twitter profile page.
 									-->
-									<a href="#" class="icon fa-twitter" target='_blank'>
+									<a href="https://twitter.com/jakebindy" class="icon fa-twitter" target='_blank'>
 										<span class="label">Twitter</span>
 									</a>
 								</li>
 								<!-- The Facebook icon -->
 								<li>
-									<a href="#" class="icon fa-linkedin" target='_blank'>
+									<a href="https://www.linkedin.com/in/jakob-bindas-04343a196/" class="icon fa-linkedin" target='_blank'>
 										<span class="label">LinkedIn</span>
 									</a>
 								</li>
 								<!-- The Instagram icon -->
 								<li>
-									<a href="#" class="icon fa-instagram" target='_blank'>
+									<a href="https://www.instagram.com/jake.bindas/?hl=en" class="icon fa-instagram" target='_blank'>
 										<span class="label">Instagram</span>
 									</a>
 								</li>
