--- a/index.html
+++ b/index.html
@@ -82,12 +82,6 @@
 								<li>
 									<a href="#contact">Contact</a>
 								</li>
-								<!-- 	You can add another button to your navigation menu by adding
-									another List Item with a link inside of it.
-								-->
-								<!-- <li>
-									<a href="images/Astronomy.jpg">My CV</a>
-								</li> -->
 							</ul>
 						</nav>
 					</header>
@@ -119,6 +113,12 @@
 						<article id="research">
 							<h2 class="major">Research</h2>
 							<p>
+								<b>Research Experience for Undergraduates (REU) at University of Florida</b><br>
+								Advisor: Prof. Jamie Tayar <h3 align="right">Summer 2022</h3>
+								I have yet to receive information regarding the project I will be working on over the summer.
+							</p>
+							
+							<p>
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								-->
@@ -126,6 +126,7 @@
 								Advisor: Prof. Carles Badenes </br>
 								Investigating core helium burning stars to observe shorter binary companions than otherwise predicted
 							</p>
+							
 							<p>
 								<b>Survey of Transiting Extrasolar Planets at University of Pittsburgh (STEPUP)</b><br>
 								Advisor: Prof. Michael Wood-Vasey</br>
