--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 							<h2 class="major">Research</h2>
 							<p>
 								<b>Research Experience for Undergraduates (REU) at University of Florida</b><br>
-								Advisor: Prof. Jamie Tayar
+								Advisor: Prof. Jamie Tayar </br>
 								I have yet to receive information regarding the project I will be working on over the summer.
 							</p>
 							
