--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 											<a href="#research">Research</a>
 										</li>
 										<li>
-											 <a href="https://sites.pitt.edu/~stepup/index.html" target="_blank">STEPUP</a> 
+											 <a href="#stepup">STEPUP</a> 
 										</li>
 										<li>
 											<a href="#contact">Contact</a>
@@ -134,6 +134,14 @@
 								producing light curves to detect planetary transits.
 							</p>
 						</article>
+
+						<!-- Here is the "STEPUP" card. -->
+						<article id="stepup">
+							<h2 class="major">Survey of Transiting Extrasolar Planets at University of Pittsburgh (STEPUP)</h2>
+							<p>
+								Click <a href="https://sites.pitt.edu/~stepup/index.html" target="_blank">here</a> to learn more about STEPUP!
+						</article>
+
 						<!-- Here is a the "Contact" card. -->
 						<article id="contact">
 							<h2 class="major">Contact</h2>
