--- a/index.html
+++ b/index.html
@@ -137,9 +137,21 @@
 
 						<!-- Here is the "STEPUP" card. -->
 						<article id="stepup">
-							<h2 class="major">Survey of Transiting Extrasolar Planets at University of Pittsburgh (STEPUP)</h2>
+							<h2 class="major">STEPUP</h2>
 							<p>
-								Click <a href="https://sites.pitt.edu/~stepup/index.html" target="_blank">here</a> to learn more about STEPUP!
+								Stepup is the Survey of Transiting Extrasolar Planets at the University of Pittsburgh that uses the Allegheny Observatory’s Keeler 16” telescope
+								to detect extrasolar planets (exoplanets). We take observations (weather permitting) and collect data about stars that we then analyze to determine
+								if there is actually a planet in the host star's orbit. To do this, we currently perform Instrument Signature Removal (ISR) with our data processing
+								pipeline, SIA (STEPUP Image Analysis), and perform photometry using an external program known as AstroImageJ. We take the output file from AIJ to
+								produce light curves for our analysis. <a href="https://sites.pitt.edu/~stepup/index.html" target="_blank">Click here</a> to learn more about STEPUP!
+							</p>
+								I serve as the current Data Processing Lead for STEPUP. Currently, I am working on a curve fitting function that takes the raw data from the AIJ output
+								and use Python to fit for the transit depth and transit time, ultimately giving us the ingress and egress times of the transit. Over the summer, I plan
+								to repair SIA, as we are currently experiencing issues with the Astrometry feature as we are using a CCD that is incompatible with the World Coordinate
+								System (WCS) Tools that we run our data through. I also plan to lead the redesign of our website. 
+							<p>
+								
+							</p>
 						</article>
 
 						<!-- Here is a the "Contact" card. -->
