--- a/index.html
+++ b/index.html
@@ -103,15 +103,12 @@
 								<b>Education:</b> </br> 
 								B.S. in Physics and Astronomy, University of Pittsburgh, 2023 (anticipated)
 							</p>
-							<p>
-								<b>Research Interests:</b> </br> 
-								Stellar evolution, exoplanets, galactic evolution
-							</p>
 						</article>
 
 						<!-- Here is the "Research" card. -->
 						<article id="research">
 							<h2 class="major">Research</h2>
+							<h3 class='major'>Current Projects</h3>
 							<p>
 								<b>Research Experience for Undergraduates (REU) at University of Florida</b><br>
 								Advisor: Prof. Jamie Tayar </br>
@@ -133,6 +130,7 @@
 								Observe and collect data from stars predicted to have an exoplanet in its orbit. Analyze data by 
 								producing light curves to detect planetary transits.
 							</p>
+					
 						</article>
 
 						<!-- Here is the "STEPUP" card. -->
