--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<!-- Here is the "Research" card. -->
 						<article id="research">
 							<h2 class="major">Research</h2>
-							<h3 class='major'>Current Projects</h3>
+							<p> <b>Current Projects</b> </p>
 							<p>
 								<b>Research Experience for Undergraduates (REU) at University of Florida</b><br>
 								Advisor: Prof. Jamie Tayar </br>
@@ -130,6 +130,12 @@
 								Observe and collect data from stars predicted to have an exoplanet in its orbit. Analyze data by 
 								producing light curves to detect planetary transits.
 							</p>
+
+							<p> <b>Research Interests</b> </p> </br>
+								I am currently interested in stellar evolution, galactic evolution and exoplanetary research. I want to become more
+								involved with writing computational astrophysics code. I hope to be able to explore other fields as well,
+								such as research involving black holes and gravitational waves.
+							
 					
 						</article>
 
