--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
 						<!-- Here is the "Research" card. -->
 						<article id="research">
 							<h2 class="major">Research</h2>
-							<p> <b>Current Projects</b> </p>
+							<p> 
+								<b>Current Projects</b> 
+							</p>
 							<p>
 								<b>Research Experience for Undergraduates (REU) at University of Florida</b><br>
 								Advisor: Prof. Jamie Tayar </br>
@@ -131,11 +133,12 @@
 								producing light curves to detect planetary transits.
 							</p>
 
-							<p> <b>Research Interests</b> </p> </br>
+							<p> 
+								<b>Research Interests</b> <br>
 								I am currently interested in stellar evolution, galactic evolution and exoplanetary research. I want to become more
 								involved with writing computational astrophysics code. I hope to be able to explore other fields as well,
 								such as research involving black holes and gravitational waves.
-							
+							</p>
 					
 						</article>
 
