--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 						<article id="research">
 							<h2 class="major">Research</h2>
 							<p> 
-								<b>Current Projects</b> 
+								<u><b>Current Projects</b></u>
 							</p>
 							<p>
 								<b>Research Experience for Undergraduates (REU) at University of Florida</b><br>
@@ -134,7 +134,9 @@
 							</p>
 
 							<p> 
-								<b>Research Interests</b> <br>
+								<u><b>Research Interests</b></u>
+							</p>
+							<p>
 								I am currently interested in stellar evolution, galactic evolution and exoplanetary research. I want to become more
 								involved with writing computational astrophysics code. I hope to be able to explore other fields as well,
 								such as research involving black holes and gravitational waves.
