--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 						<!-- Here is the "Research" card. -->
 						<article id="research">
 							<h2 class="major">Research</h2>
-							<p> 
-								<u><b>Current Projects</b></u>
-							</p>
+							
+							<h5 class="major">Current Projects</h5>
+							
 							<p>
 								<b>Research Experience for Undergraduates (REU) at University of Florida</b><br>
 								Advisor: Prof. Jamie Tayar </br>
@@ -133,9 +133,8 @@
 								producing light curves to detect planetary transits.
 							</p>
 
-							<p> 
-								<u><b>Research Interests</b></u>
-							</p>
+							<h5 class="major">Research Interests</h5>
+
 							<p>
 								I am currently interested in stellar evolution, galactic evolution and exoplanetary research. I want to become more
 								involved with writing computational astrophysics code. I hope to be able to explore other fields as well,
