--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<p> 
-								<b>Feel free to email me at jmb442@pitt.edu if you have any questions about my current work!</b> 
+								Feel free to email me at jmb442@pitt.edu if you have any questions about my current work!
 							</p>
 
 							<!-- 	Here are the fancy icons that link to your social media.
