--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 						<article id="stepup">
 							<h2 class="major">STEPUP</h2>
 							<p>
-								Stepup is the Survey of Transiting Extrasolar Planets at the University of Pittsburgh that uses the Allegheny Observatory’s Keeler 16” telescope
+								STEPUP is the Survey of Transiting Extrasolar Planets at the University of Pittsburgh that uses the Allegheny Observatory’s Keeler 16” telescope
 								to detect extrasolar planets (exoplanets). We take observations (weather permitting) and collect data about stars that we then analyze to determine
 								if there is actually a planet in the host star's orbit. To do this, we currently perform Instrument Signature Removal (ISR) with our data processing
 								pipeline, SIA (STEPUP Image Analysis), and perform photometry using an external program known as AstroImageJ. We take the output file from AIJ to
