--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 							</p>
 
 							<figure>
-								<img src="images/Dogs.jpg" style='height: 75%; width: 75%; top: 30px; right:30px;'/>
+								<img src="images/Dogs.JPG" style='height: 75%; width: 75%; top: 30px; right:30px;'/>
 								<figcaption>
 									Koda (black), Morgan (sister), Luka (white), Santa holding Mishka, Anakin (grey), Kaya (red), Bria (sister) and Me!
 								</figcaption>
