--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 								<!---Try adding "border-radius: 50%;" to the style attribute.-->
 								<img src="images/Headshot.jpg" style="width:280px; height:280px; object-fit: cover; border-radius: 25%;">
 								<p>
-									Undergraduate Student, Rising Fifth Year <br> University of Pittsburgh
+									Bachelor of Science in Physics & Astronomy <br> University of Pittsburgh
 								</p>
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href="" target="_blank">Curriculum Vitae</a>
+									<a href="" target="_blank">Resume</a> | <a href="" target="_blank">Curriculum Vitae</a>
 								</p>
 							</div>
 						</div>
@@ -56,28 +56,56 @@
 						<article id="about">
 							<h2 class="major">About Me</h2>
 							<p>
-								As I made headway throughout my astrophysics degree, I decided I wanted to give research a try, as this would allow me to explore the unknown of space at a higher level.
-								I began working on a project in the fall semester of 2021, working under Prof. Carles Badenes and Dr. Christine Daher analyzing close period 
-								binary core helium burning (red clump) stars and investigating why a binary companion still exists around a red clump host star when the secondary star should
-								have been engulfed by the red clump star during its evolution through the red giant branch. Shortly after starting on this project, I found myself recruited
-								to <a href="/stepup">STEPUP</a> as the new data processing lead in order to repair the (still) broken data processing pipeline, SIA (STEPUP Image Analysis).
-								I am currently not working on either of these projects as I am participating in the Research Experience for Undergraduates (REU) program, 
-								funded by the National Science Foundation (NSF). In the summer of 2022, I worked with Prof. Jamie Tayar investigating various models for an effect known as 
-								weakened magnetic brakin in late main sequence and early sub giant stars. This summer I am working with Prof. Jen van Saders and Dr. Marc Hon in probing red giant masses
-								using asteroseismology.
+								I am a recent graduate from the University of Pittsburgh with a Bachelor of Science degree in Physics & Astronomy. Throughout my academic career at Pitt, I 
+								participated in various research projects in the field of stellar astronomy. In my most recent project, I explored the field of asteroseismology in studying 
+								solar-like oscillating red giants in hopes of developing a tool to better constrain the asteroseismic parameter nu_max, or the star's characteristic oscillation
+								frequency. This project is in its final stages where I am actively debugging the results from Python's Empirical Mode Decomposition (EMD) package. To learn more,
+								head over to my research tab. 
 							</p>
 
 							<p>
-								I spend a lot of time coding. My strongest languages include Python and Java while I am familiar with C, HTML, CSS and JavaScript. Most of my coding experience comes framework
-								in class assignments and projects and from working on my research.
+								I am actively in the job market for an entry level software engineering position. Ideally, I would be working in the aerospace industry focusing on writing code that 
+								directly has an impact on vehicles that are being sent up into space. Although I would prefer a full-time position, I am open to any experience in the form of internships.
+								I am a highly motivated, self-starting individual who wants to make an impact in the scene of interplanetary travel.
 							</p>
 
 							<p>
-								I recently visited the observatories at Mauna Kea, HI, and fell in love with the scene. I am big on observing and hope to gain telescope time!
+								My main experience comes in the form of astronomy research and my extensive computer science coursework. I opted for the minor in computer science, however, I have
+								completed almost every portion of the B.S. in CS except my capstone project and a few courses. Key courses I completed through Pitt's CS department include
+								
+								<ul>
+									<li>Data Structures</li>
+									<li>Computer Organization & Assembly</li>
+									<li>Introduction to Systems Software</li>
+									<li>Algorithm Implementation</li>
+									<li>Programming Language for Web Applications</li>
+									<li>Interface Design Methodology</li>
+									<li>Introduction to Data Science</li>
+									<li>Principles of Computer Game Design and Implementation</li>
+									<li>Introduction to Machine Learning</li>
+								</ul>
+								and others. I have also completed various upper level physics & astronomy courses such as 
+								
+								<ul>
+									<li>Data Science and Statistics (Graduate)</li>
+									<li>Galaxies and Extragalactic Astronomy (Graduate)</li>
+									<li>Stars, Stellar Structure & Evolution</li>
+									<li>Mechanics</li>
+									<li>Quantum Mechanics</li>
+								</ul>
+
 							</p>
 
 							<p>
-								I am most passionate about my dogs. We have eight dogs in our pack, seven of which are huskies. Almost a year ago, I adopted my boy Maverick and haven't looked
+								I spend a lot of time practicing my coding skills. My strongest languages include Python, Java and R. while I am familiar with C, HTML, CSS and JavaScript. 
+								I am actively developing a data processing pipeline for the Allegheny Observatory. This project has been in the works for a couple years now, but my time has mostly
+								been spent observing using the 24" telescope and collecting data on quasars in hopes of setting up a long-term QSO monitoring pipeline. I am collaborating with 
+								Pitt Alumnus Justin Holt on this project where we are both getting hands on experience with the software development lifecycle.
+							</p>
+
+
+							<p>
+								I am most passionate about my dogs. We have eight dogs in our pack, seven of which are huskies. Almost two years ago, I adopted my boy Maverick and haven't looked
 								back since. One day, I hope to be able to rescue huskies from shelters and rehome them with families that will properly care for these beautiful dogs. I hope to
 								have enough land to start my own sanctuary so I am able to bring these dogs back into good health.
 							</p>							
@@ -92,8 +120,8 @@
 							<br>
 
 							<p>
-								When I am not working on school work or working on my research, I mostly spend my time playing volleyball. I am currently the libero
-								(number 4) for the Pitt Men's Volleyball Club (PMVBC)'s A-Team. I have been a part of a few intramural teams and also play casually whenever possible on the lawn
+								When I am not working on school work or working on my research, I mostly spend my time playing volleyball. I played as the libero for the 
+								Pitt Men's Volleyball Club (PMVBC)'s A-Team. I have been a part of a few intramural teams and also play casually whenever possible on the lawn
 								of the Cathedral of Learning at Pitt. If I am not playing volleyball, you may find me skiing at Seven Springs during ski season or simply at my computer 
 								speedrunning my favorite video games. I am also trying my best to get into astrophotography, so a lot of my more recent time has been spent researching various
 								cameras, star trackers and telescopes.
@@ -105,13 +133,6 @@
 									Koda (black), Morgan (sister), Luka (white), Santa holding Mishka, Anakin (grey), Kaya (red), Bria (sister) and Me!
 								</figcaption>
 							</figure>
-
-							<!-- <figure>
-								<img src="images/PMVBC.jpg" style='height: 50%; width: 75%;'/>
-								<figcaption>
-									PMVBC Roster 2021-2022
-								</figcaption>
-							</figure> -->
 						</article>
 
 						<!-- Here is the "Research" card. -->
@@ -291,7 +312,7 @@
 						<!-- 	You can change "Untitled" to your name to show everyone that
 							this is your work.
 						-->
-						<p class="copyright">&copy; Jakob Bindas 2022. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Jakob Bindas 2024. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
