--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								</p>
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href="" target="_blank">Resume</a> | <a href="" target="_blank">Curriculum Vitae</a>
+									<a href="/resources/Bindas_Resume_Fall_2024.pdf" download="Bindas_Resume">Resume</a> | <a href="/resources/Bindas_Resume_Fall_2024.pdf" download="Bindas_CV">Curriculum Vitae</a>
 								</p>
 							</div>
 						</div>
